--- a/css/styles.css
+++ b/css/styles.css
@@ -1,83 +1,86 @@
-body
-{
-    background: white;
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Raleway:wght@400;500;700&family=Roboto:wght@400;500&display=swap');
+@font-face {
+    font-family: 'CircularStd';
+    src: url('./../fonts/CircularStd-Medium.ttf'),
+    url('./../fonts/CircularStd-Bold.ttf')
+}
+
+
+.principal-bg {
     font-family: 'Roboto';
-
 }
 
-.display-4
-{
-    padding: 40px;
-    color: #1937B5;
-    font-size: 40px;
-    font-weight: bold;
-
-}
-.Parrafo1
-{
-    margin-top: 20vh;
-    margin-left: 60vw;
-    color: #414141;
-    position: absolute;
-}
-.circulo
-{
-    background-color: #F9E6A4;
-    height: 640px;
-    width: 640px;
-
-    border-radius: 100%;
-
-}
-.imagns
-{
-    margin-left: 10vw;
-    padding: 20px;
-    position: absolute;
-    top: 100px;
-}
-.apps
-{
-    top: 80vh;
-    margin-left: 60vw;
-    position: absolute;
-}
-.Parrafo2
-{
-    margin-top: 40vh;
-    margin-left: 20vw;
-    color: #414141;
-    position: absolute;
-
-}
-.circulo2
-{
-    background-color: #F9E6A4;
-    height: 640px;
-    width: 640px;
-    margin-left: 50vw;
-    border-radius: 100%;
-
+.principal-title{
+    font-family: 'CircularStd';
+    font-size: 4rem;
+    line-height:5rem;
 }
 
-.imagns2
-{
-    margin-left: 60vw;
-    padding: 20px;
-    position: absolute;
-    top: 750px;
+.secondary-title{
+    font-family: 'CircularStd';
+    font-size: 2rem;
+    font-weight: 600;
 }
-.Parrafo3
-{
-    margin-top: 140vh;
-    margin-left: 60vw;
-    color: #414141;
-    position: absolute;
+
+.principal-title--cream{
+    font-family: 'Caveat';
 }
-.imagns3
-{
-    margin-left: 10vw;
-    padding: 20px;
-    position: absolute;
-    top: 1380px;
+
+.principal-img{
+    height: 40px !important;
+}
+
+.main{
+    background-color: #EBEBEB;
+}
+
+
+
+.feature-img{
+    height: 110px !important;
+}
+
+
+.button {
+    border-radius: 20px !important;
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+}
+
+
+@media (max-width: 992px) {
+    .principal-title{
+        font-size: 3rem;
+        line-height:3.5rem;
+        text-align: center;
+    }
+    
+    .principal-message{
+        text-align: center;
+    }
+    .big-principal-img{
+        max-height: 530px !important;
+    }
+}
+
+@media (min-width: 992px) {
+    .feature-item{
+        background: white;
+        border-radius: 10px;
+        padding: 10px 20px;
+        box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.14);
+    }
+}
+
+@media (max-width: 678px) {
+    .principal-title{
+       font-size: 2.2rem;
+       line-height:3rem;
+    }
+    .principal-img{
+        height: 30px !important;
+    }
+    .feature-img{
+        height: 75px !important;
+    }
 }
