--- a/css/styles.css
+++ b/css/styles.css
@@ -5,21 +5,29 @@
     url('./../fonts/CircularStd-Bold.ttf')
 }
 
+html{
+    scroll-behavior: smooth;
+}
 
-.principal-bg {
-    font-family: 'Roboto';
+.principal-left{
+    animation:show-above 1s ease-in-out;
+}
+
+@keyframes show-above{
+    0%{
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
 }
 
 .principal-title{
     font-family: 'CircularStd';
     font-size: 4rem;
     line-height:5rem;
-}
-
-.secondary-title{
-    font-family: 'CircularStd';
-    font-size: 2rem;
-    font-weight: 600;
 }
 
 .principal-title--cream{
@@ -30,18 +38,87 @@
     height: 40px !important;
 }
 
-.main{
-    background-color: #EBEBEB;
+.big-principal-img {
+    animation: move_img 3s ease-in-out infinite;
 }
 
-.main-white {
+
+@keyframes move_img{
+    0%{
+        transform: translateY(15px);
+    }
+    25%{
+        transform: translateY(-10px);
+    }
+    100%{
+        transform: translateY(15px);
+    }
+}
+
+.principal-bg {
+    font-family: 'Roboto';
+    position: relative;
+    padding-bottom: 125px;
+}
+.wave{
+    height: 100px;
+    width: 100%;
+    position: absolute;
+    background-image: url(../img/wave.png);
+    background-size: cover;
+    bottom:0;
+    animation: desplazamiento 5s ease -.125s infinite;
+}
+
+@keyframes desplazamiento {
+    0%, 100%{
+        transform: translateY(15px);
+    }
+
+    50%{
+        transform: translateY(5px);
+    }
+}
+
+.main{
+    background-color: #f5f5f7;
+}
+
+.secondary-title{
+    font-family: 'CircularStd';
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.animated{
+    transition:all 0.5s;
+    opacity: 0;
+}
+
+.show-above{
+    animation: show-above 1s;
+    opacity: 1;
+}
+
+.how{
     background-color: #FFF;
 }
 
-.second-section {
-    background-color: #1937B5;
+.experience {
+    background-image: url(../img/background-experience.png);
 }
 
+.email {
+    background-image: url(../img/background-experience.png);
+}
+
+.email-container {
+   width: 60%;
+}
+
+.number{
+    font-family: 'CircularStd';
+}
 
 .feature-img{
     height: 110px !important;
@@ -49,6 +126,10 @@
 
 .example-app{
     height: 600px !important;
+}
+
+.example-app-reduced{
+    display: none;
 }
 
 .legend{
@@ -66,11 +147,20 @@
 }
 
 .description {
-    min-height: 10em;
+    min-height: 6em;
 }
+
 .page-footer{
     background: #414141;
 }
+
+@media (max-width: 1200px) {
+    .example-app{
+        height: 500px !important;
+    }
+
+}
+
 
 @media (max-width: 992px) {
     .principal-title{
@@ -84,16 +174,24 @@
     }
     .big-principal-img{
         max-height: 530px !important;
+        transition: all 300ms;
+    }
+    .example-app{
+        height: 330px !important;
+    }
+    .border-end{
+        border:0 !important;
     }
 }
 
 @media (min-width: 992px) {
     .feature-item{
-        background: white;
+        background: #FFF;
         border-radius: 10px;
         padding: 10px 20px;
         box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.14);
     }
+   
 }
 
 @media (max-width: 678px) {
@@ -105,7 +203,7 @@
         height: 30px !important;
     }
     .feature-img{
-        height: 75px !important;
+        height: 65px !important;
     }
     .legend {
         font-size: 11px;
@@ -120,4 +218,81 @@
     .app-example-app-left{
         text-align: left;
     }
+    .example-app{
+        display: none;
+    }
+    .example-app-reduced{
+        display: block;
+        margin-top: 2rem;;
+        max-height: 350px;
+    }
 }
+
+  @media (max-width:767px) {
+    .testimonials-clean h2 {
+      margin-bottom:25px;
+      padding-top:25px;
+      font-size:24px;
+    }
+    .description {
+      min-height: 4em;
+    }
+  }
+  
+  .testimonials-clean .item {
+    margin-bottom:32px;
+  }
+  
+  .testimonials-clean .item .box {
+    padding:30px;
+    background-color:#fff;
+    position:relative;
+  }
+  
+  .testimonials-clean .item .box:after {
+    content:'';
+    position:absolute;
+    left:30px;
+    bottom:-24px;
+    width:0;
+    height:0;
+    border:15px solid transparent;
+    border-width:12px 15px;
+    border-top-color:#fff;
+  }
+  
+  .testimonials-clean .item .author {
+    margin-top:28px;
+    padding-left:25px;
+  }
+  
+  .testimonials-clean .item .name {
+    font-weight:bold;
+    margin-bottom:2px;
+    color:inherit;
+  }
+  
+  .testimonials-clean .item .title {
+    font-size:13px;
+    color:#9da9ae;
+  }
+  
+  .testimonials-clean .item .description {
+    font-size:15px;
+    margin-bottom:0;
+  }
+  
+  .testimonials-clean .item img {
+    max-width:40px;
+    float:left;
+    margin-right:12px;
+    margin-top:-5px;
+  }
+  
+  .carousel-item.active, .carousel-item-next, .carousel-item-prev {
+    display: flex;
+  }
+
+  .carousel-inner {
+    width:80%;
+  }
