--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,10 @@ html{
     font-family: 'CircularStd';
 }
 
+.feature-item{
+    min-height: 320px;
+}
+
 .feature-img{
     height: 110px !important;
 }
@@ -168,7 +172,9 @@ html{
         line-height:3.5rem;
         text-align: center;
     }
-    
+    .feature-item{
+        min-height: auto;
+    }
     .principal-message{
         text-align: center;
     }
@@ -296,83 +302,6 @@ html{
   .carousel-inner {
     width:80%;
   }
-
-
-
-.subscribe-area {
-    background-image: url("../img/BG.png");
-    background-color:#1937B5;
-
-}
-
-.pb-50 {
-    padding-bottom: 50px;
-}
-.pt-70 {
-    padding-top: 70px;
-}
-
-.mb-15 {
-    margin-bottom: 15px;
-}
-
-.subscribe-text span {
-    font-size: 12px;
-    font-weight: 700;
-    color: #fff;
-    letter-spacing: 5px;
-}
-.subscribe-text h2 {
-    color: #fff;
-    font-size: 36px;
-    font-weight: 300;
-    margin-bottom: 0;
-    margin-top: 6px;
-
-    font-family: 'CircularStd';
-    font-size: 2rem;
-    font-weight: 550;
-}
-.subscribe-wrapper {
-    overflow: hidden;
-}
-.mb-15 {
-    margin-bottom: 15px;
-}
-.subscribe-form {
-}
-.subscribe2-wrapper .subscribe-form input {
-
-    display: inline-block;
-    font-size: 15px;
-    font-weight: 300;
-    height: 57px;
-    padding-left: 35px;
-    width: 50%;
-    cursor: pointer;
-}
-
-.subscribe2-wrapper .subscribe-form button {
-    background: #000000;
-    border: none;
-    color: #ffffff;
-    display: inline-block;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1;
-    padding: 18px 46px;
-    transition: all 0.3s ease 0s;
-}
-.subscribe2-wrapper .subscribe-form button i {
-    font-size: 18px;
-    padding-left: 5px;
-}
-.img-email
-{
-    float: left;
-    margin-right: 20%;
-    margin-left: 10%;
-}
 
 
 
